new colors added to variables.scss

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,6 @@
 $font-size-normal: 1rem;
+$input-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 $gray: #ccc;
+$black: #000;
+$light-gray: #e7e7e7;
 $border-input: $gray;
