--- a/src/components/Temperature/Temperature.module.scss
+++ b/src/components/Temperature/Temperature.module.scss
@@ -1,3 +1,11 @@
+@import "src/styles/variables";
+
 .temperature {
-  display: flex;
+  display: inline-block;
+  .badge {
+    background-color: $light-gray;
+    border-radius: 0.5rem;
+    display: inline-block;
+    padding: 0.25rem 0.5rem;
+  }
 }
